[package]
name = "geometry-wars"
version = "0.2.0"
edition = "2021"

[dependencies]
ordered-float = "4.2.0"
num = "0.4.0"
bevy = { version = "0.13", features = ["bevy_sprite", "wayland"] }
bevy_egui = "0.25"
#egui_dnd = "0.7.0"
bevy_xpbd_2d = "0.4.2"
bevy_prototype_lyon = "0.11.0"
bevy_particle_systems = { version = "0.12.0" }
bevy_tweening = "0.10"
strum = "0.26.2"
strum_macros = "0.26.2"
rand = "0.8.5"
rand_distr = "0.4.3"
bevy-debug-text-overlay = "8.1.0"
geo = "0.28.0"
bevy-inspector-egui = "0.23.4"
bevy-trait-query = "0.4"
hexx = "0.15.0"
big-brain = "0.20.0"

# Enable a small amount of optimization in debug mode
# [profile.dev]
# opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
