[package]
name = "geometry-wars"
version = "0.2.0"
edition = "2021"

[dependencies]
ordered-float = "4.5.0"
num = "0.4.3"
bevy = { version = "0.15", features = ["bevy_sprite", "wayland"] }
bevy_egui = "0.31.1"
#egui_dnd = "0.7.0"
avian2d = { git = "https://github.com/Jondolf/avian.git", branch = "main", default-features = false, features = ["2d", "f64", "parry-f64", "debug-plugin"] }
#bevy_prototype_lyon = { git="https://github.com/Nilirad/bevy_prototype_lyon.git", branch="master"}
#bevy_particle_systems = { version = "0.13.0" }
bevy_hanabi = { version = "0.14", default-features = false, features = ["2d"] }
bevy_tweening = "0.12"
strum = "0.26.3"
strum_macros = "0.26.4"
rand = "0.8.5"
rand_distr = "0.4.3"
# bevy-debug-text-overlay = "8.1"
geo = "0.29.3"
bevy-inspector-egui = "0.28.0"
bevy-trait-query = "0.7"
hexx = "0.19.0"
big-brain = "0.22"

# Enable a small amount of optimization in debug mode
# [profile.dev]
# opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
